Fix modal on mobile

--- a/src/components/Steps/Components/ItemDescriptionModal/ItemDescriptionModal.module.scss
+++ b/src/components/Steps/Components/ItemDescriptionModal/ItemDescriptionModal.module.scss
@@ -16,30 +16,39 @@
     text-align: center;
     grid-template-columns: repeat(4, 1fr);
     font-size: $fontXSmall;
-    column-gap: 1.4rem;
     font-family: $fontFamilyMedium;
+    @media only screen and (min-width: $breakpointDesktop) {
+      column-gap: 1rem;
+    }
+    @media only screen and (max-width: $breakpointTablet) {
+      column-gap: 0;
+      margin: 1.5rem 0;
+    }
 
     & div {
-      margin-bottom: 12px;
+      @media only screen and (min-width: $breakpointDesktop) {
+        margin-bottom: 0.12rem;
+      }
     }
 
     & .metafieldValue {
       text-align: center;
-      font-size: $fontLarge;
       font-weight: 700;
       margin-bottom: -1rem;
+      font-size: $fontLarge;
       @media only screen and (max-width: $breakpointDesktop) {
         font-size: $semiMediumFont;
       }
     }
     & .metafieldName {
       text-align: center;
-      font-size: $fontMediumLarge;
       font-family: $fontFamilyThin;
-    }
-
-    @media only screen and (max-width: $breakpointTablet) {
-      grid-template-columns: repeat(2, 1fr);
+      @media only screen and (min-width: $breakpointDesktop) {
+        font-size: $fontMedium;
+      }
+      @media only screen and (max-width: $breakpointTablet) {
+        font-size: $fontXSmall;
+      }
     }
   }
 
@@ -79,7 +88,12 @@
   }
 
   & .subtitle {
-    margin-top: -1rem;
+    @media only screen and (min-width: $breakpointDesktop) {
+      margin-top: -2rem;
+    }
+    @media only screen and (max-width: $breakpointTablet) {
+      text-align: center;
+    }
   }
 
   & .descriptionWrapper {
@@ -87,11 +101,14 @@
     flex-direction: column;
     justify-content: center;
     background-color: $white;
-    row-gap: 2rem;
-    padding: 2rem 5rem;
 
+    @media only screen and (min-width: $breakpointTablet) {
+      row-gap: 2rem;
+      padding: 4rem 4rem;
+    }
     @media only screen and (max-width: $breakpointTablet) {
-      padding: 2rem 1rem;
+      padding: 2.5rem 2.5rem;
+      row-gap: 0.5rem;
     }
 
     & .contains {
@@ -100,7 +117,10 @@
 
     & .ingredients {
       h3 {
-        margin-bottom: 0;
+        margin: 0;
+        @media only screen and (max-width: $breakpointTablet) {
+          font-size: $fontMediumSmall;
+        }
       }
       & .ingredientsText {
         font-size: calc($fontXSmall - 0.3rem);
